fixed: broadcast api
